--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">EroadTest</string>
+
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="check">Check</string>
 </resources>
